src/test/resources/bad/custom/003-self-outside-of-class.lat
int main() {
    self;
    return 0;
}
